--- a/notebook/train.ipynb
+++ b/notebook/train.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,6 +14,8 @@
     "import warnings\n",
     "\n",
     "# Modelling\n",
+    "from sklearn.preprocessing import OneHotEncoder, StandardScaler\n",
+    "from sklearn.compose import ColumnTransformer\n",
     "from sklearn.metrics import mean_squared_error, r2_score\n",
     "from sklearn.neighbors import KNeighborsRegressor\n",
     "from sklearn.tree import DecisionTreeRegressor\n",
@@ -28,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +39,119 @@
     "df['total score'] = df['math score'] + df['reading score'] + df['writing score']\n",
     "df['average'] = df['total score']/3\n",
     "\n",
-    "X = df."
+    "X = df.loc[:, ['gender', 'race/ethnicity', 'lunch', 'test preparation course', 'reading score', 'writing score']]\n",
+    "y = df['math score']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "num_features = X.select_dtypes(exclude=\"object\").columns\n",
+    "cat_features = X.select_dtypes(include=\"object\").columns\n",
+    "\n",
+    "numeric_transformer = StandardScaler()\n",
+    "oh_transformer = OneHotEncoder()\n",
+    "\n",
+    "preprocessor = ColumnTransformer(\n",
+    "    [\n",
+    "        (\"OneHotEncoder\", oh_transformer, cat_features),\n",
+    "         (\"StandardScaler\", numeric_transformer, num_features),        \n",
+    "    ]\n",
+    ")\n",
+    "\n",
+    "X = preprocessor.fit_transform(X)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "((800, 13), (200, 13))"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# separate into train/test\n",
+    "\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X,y,test_size=0.2,random_state=42)\n",
+    "X_train.shape, X_test.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def evaluate_model(true, predicted):\n",
+    "    mae = mean_absolute_error(true, predicted)\n",
+    "    mse = mean_squared_error(true, predicted)\n",
+    "    rmse = np.sqrt(mean_squared_error(true, predicted))\n",
+    "    r2_square = r2_score(true, predicted)\n",
+    "    return mae, rmse, r2_square"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                model_name       mae      rmse        r2\n",
+      "2                    Ridge  4.196159  5.388689  0.880668\n",
+      "0        Linear Regression  4.282500  5.488126  0.876224\n",
+      "8       AdaBoost Regressor  4.591658  5.896516  0.857117\n",
+      "7    CatBoosting Regressor  4.506695  5.986143  0.852740\n",
+      "5  Random Forest Regressor  4.692784  6.093967  0.847388\n",
+      "1                    Lasso  5.157882  6.519695  0.825320\n",
+      "6             XGBRegressor  5.136038  6.566012  0.822829\n",
+      "3    K-Neighbors Regressor  5.492000  6.915143  0.803487\n",
+      "4            Decision Tree  6.320000  8.003905  0.736735\n"
+     ]
+    }
+   ],
+   "source": [
+    "models = {\n",
+    "    \"Linear Regression\": LinearRegression(),\n",
+    "    \"Lasso\": Lasso(),\n",
+    "    \"Ridge\": Ridge(),\n",
+    "    \"K-Neighbors Regressor\": KNeighborsRegressor(),\n",
+    "    \"Decision Tree\": DecisionTreeRegressor(),\n",
+    "    \"Random Forest Regressor\": RandomForestRegressor(),\n",
+    "    \"XGBRegressor\": XGBRegressor(), \n",
+    "    \"CatBoosting Regressor\": CatBoostRegressor(verbose=False),\n",
+    "    \"AdaBoost Regressor\": AdaBoostRegressor()\n",
+    "}\n",
+    "\n",
+    "\n",
+    "eval_list = []\n",
+    "\n",
+    "for model_name, model in models.items():\n",
+    "    model.fit(X_train, y_train)\n",
+    "\n",
+    "    # Make predictions\n",
+    "    y_train_pred = model.predict(X_train)\n",
+    "    y_test_pred = model.predict(X_test)\n",
+    "\n",
+    "    eval_list.append((model_name, *evaluate_model(y_test, y_test_pred)))\n",
+    "\n",
+    "out = pd.DataFrame(eval_list, columns = ['model_name', 'mae', 'rmse', 'r2']).sort_values(by='r2', ascending=False)\n",
+    "print(out)"
    ]
   }
  ],
